package lab7.task3.q3;

import javax.management.relation.RelationSupport;

/**
 * Stopped.java
 *
 * This file represents the Stopped state.
 */

public class Stopped implements State {
	private RemoteDevice remote;
	
	public Stopped(RemoteDevice remote) {
		this.remote = remote;
	}

	// the Play button is pressed
	public boolean pressPlay() {
		System.out.println("The player is now playing.");
		remote.setState(remote.getPlayingState());
		remote.setPosition(remote.getPosition()+1);
		
		return true;
	}

	// the Paused button is pressed
	public boolean pressPause() {
		System.out.println("The player is now paused.");
		remote.setState(remote.getPausedState());
		
		return true;
	}

	// the  Stop button is pressed
	public boolean pressStop() {
		System.out.println("The player is already stopped.");
		
		return false;
	}

	@Override
	public boolean pressRewind() {
		System.out.println("The player press rewind");
		remote.setState(remote.getRewindState());

		System.out.println("Already at the begining");
		remote.setPosition(0);


		return true;
	}

	@Override
	public boolean pressLock() {
		System.out.println("Locking the buttons, press lock when stopped");
		remote.setState(remote.getLockedState());
		return true;
	}

}
